# RL_Container

./: pyproject.toml
.devcontainer/: devcontainer.json
RL_Executable/MLAgents_BurstDebugInformation_DoNotShip/Data/Plugins/: lib_burst_generated.txt
RL_Executable/env_3DBall_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
ml-agents/config/ppo/: 3DBall.yaml
results/first-run/: 3DBall.onnx  configuration.yaml
results/first-run/3DBall/: 3DBall-499225.onnx  3DBall-499225.pt  3DBall-500225.pt  checkpoint.pt  events.out.tfevents.1745933893.c92b92ac9f6a.5451.0
results/first-run/run_logs/: timers.json  training_status.json
