[tool.poetry]
name = "template-python-project"
version = "0.1.0"
description = ""
authors = ["huyghebaertthomas <thomas.huyghebaert@howest.be>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
ipykernel = "^6.29.5"
black = "^24.10.0"
pylint = "^3.3.1"
pandas = "^2.2.3"
jupyter = "^1.1.1"
torch = {version = "2.5.0+cu124", source = "pytorch-cu124"}
torchvision = {version = "0.20.0+cu124", source = "pytorch-cu124"}
torchaudio = {version = "2.5.0+cu124", source = "pytorch-cu124"}
matplotlib = "^3.10.1"

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"